---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(common)" ]
    2 [ label="SyncProject(base)" ]
    3 [ label="RunTask(common:build)" ]
    4 [ label="SyncProject(client)" ]
    5 [ label="SyncProject(server)" ]
    6 [ label="RunTask(client:build)" ]
    7 [ label="RunTask(server:build)" ]
    8 [ label="RunTask(base:build)" ]
    2 -> 0 [ ]
    1 -> 0 [ ]
    1 -> 2 [ ]
    3 -> 1 [ ]
    5 -> 0 [ ]
    4 -> 0 [ ]
    4 -> 5 [ ]
    4 -> 1 [ ]
    7 -> 5 [ ]
    6 -> 4 [ ]
    6 -> 7 [ ]
    6 -> 3 [ ]
    8 -> 2 [ ]
}
